Update Fix Client Home

--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         @* Navbar *@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid mx-5">
-                <a><img src="~/lib/bootstrap/dist/img/admin.png" alt="" width="30" height="30" class="mr-2"></a>
+                <a><img src="https://drive.google.com/uc?export=view&id=1PRI-khOq2Toj1M0KBl-B8NCK1e2GxVe7" alt="" width="30" height="30" class="mr-2"></a>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
