--- a/Client/Views/ClassAdmin/TableContent.cshtml
+++ b/Client/Views/ClassAdmin/TableContent.cshtml
@@ -28,3 +28,23 @@
 </body>
 </html>
 
+<!--modal update-->
+<div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="detetedCenterModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"> <span class="bi bi-newspaper"> Detail Section</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="" style="position : relative; width: auto; margin : auto;" class="" id="form-section">
+
+                    
+                </form>
+                
+            </div>
+        </div>
+    </div>
+</div>
