95% Main Business Process

--- a/Client/Views/Class/Details.cshtml
+++ b/Client/Views/Class/Details.cshtml
@@ -69,16 +69,17 @@
                         </div>
                         <div class="form-group">
                             <label for="inputFb">Ulasan Kamu</label>
-                            <textarea class="form-control" id="exampleInputEmail1" placeholder="ketik ulasanmu disini ..." rows="3"></textarea>
+                            <textarea class="form-control" id="reviewText" placeholder="ketik ulasanmu disini ..." rows="3"></textarea>
                             <small class="form-text text-muted">Ulasanmu sangat penting bagi kami.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary rounded float-right">Send Feedback</button>
+                        <button id="btnSendFb" type="submit" class="btn btn-primary rounded float-right">Send Feedback</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 @* Getting Rating Value
     <button id="chk" type="button" class="btn btn-success">Check</button>
