--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 Account
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="~/dashboard">My Dashboard</a>
+                                <a class="dropdown-item" href="~/dashboard">My Classes</a>
                                 <a class="dropdown-item" href="~/account">My Account</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Logout</a>
