--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - Client</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/user.css" />
     <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-cyFXZtmM2vBT9TVs"></script>
@@ -29,15 +31,15 @@
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <div id="loginLogout">
-                                <a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Account
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="~/dashboard">My Classes</a>
-                                    <a class="dropdown-item" href="~/account">My Account</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Logout</a>
-                                </div>
+                                @*<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Account
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="~/dashboard">My Classes</a>
+                                        <a class="dropdown-item" href="~/account">My Account</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#">Logout</a>
+                                    </div>*@
                             </div>
                         </li>
                     </ul>
@@ -60,14 +62,165 @@
         </div>
     </footer>
 
+    <div id="navModal">
+        <div class="modal fade" id="loginModal">
+            <div class="modal-dialog modal-dialog-centered" role="document" style="width: 22rem;">
+                <div class="modal-content">
+                    <div class="modal-header border-0 mt-3 mx-3">
+                        <h5>Login</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <form class="mx-2">
+                                <div class="form-group">
+                                    <label for="LogEmail">Email</label>
+                                    <input type="email" class="form-control" id="LogEmail" placeholder="example@mail.com">
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="LogPass">Password</label>
+                                    <input type="password" class="form-control" id="LogPass" placeholder="*******">
+                                    <small><a href="#" class="text-dark font-italic">Lupa password?</a></small>
+                                </div>
+                                <div class="text-right">
+                                    <small><a href="#registerModal" class="text-dark font-italic" data-target="#registerModal" data-toggle="modal" data-dismiss="modal">Belum memiliki akun?</a></small>
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Register</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="registerModal">
+            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header border-0 mt-1 mx-3">
+                        <h5>Register</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <form class="mx-2">
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inEmail">Email</label>
+                                        <input type="email" class="form-control" id="inEmail" placeholder="Email">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inPass">Password</label>
+                                        <input type="password" class="form-control" id="inPass" placeholder="********">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inFName">Nama</label>
+                                        <input type="text" class="form-control" id="inFName" placeholder="John">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inLName" class="invisible">L</label>
+                                        <input type="text" class="form-control" id="inLName" placeholder="Doe">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inGender">Kelamin</label>
+                                        <select class="form-control" id="inGender">
+                                            <option>Male</option>
+                                            <option>Female</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-md-6 mb-0">
+                                        <label for="inBDate">Tanggal Lahir</label>
+                                        <div class="form-group">
+                                            <div class="datepicker date input-group">
+                                                <input type="text" placeholder="cth: 2012-12-21" class="form-control" id="inBDate">
+                                                <span class="input-group-append"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inProv">Provinsi</label>
+                                        <select id="inProv" class="form-control">
+                                            <option selected>Choose...</option>
+                                            <option>Ab</option>
+                                            <option>Bc</option>
+                                            <option>Cd</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inCity">Kota</label>
+                                        <select id="inCity" class="form-control">
+                                            <option selected>Choose...</option>
+                                            <option>Ab</option>
+                                            <option>Bc</option>
+                                            <option>Cd</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-3">
+                                        <label for="inDis">Kecamatan</label>
+                                        <select id="inDis" class="form-control">
+                                            <option selected>Choose...</option>
+                                            <option>Ab</option>
+                                            <option>Bc</option>
+                                            <option>Cd</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-md-3">
+                                        <label for="inSubDis">Kelurahan</label>
+                                        <select id="inSubDis" class="form-control">
+                                            <option selected>Choose...</option>
+                                            <option>Ab</option>
+                                            <option>Bc</option>
+                                            <option>Cd</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inAddress">Alamat</label>
+                                        <input type="text" class="form-control" id="inAddress">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inMajor">Jurusan</label>
+                                        <input type="text" class="form-control" id="inMajor">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inUniv">Universitas</label>
+                                        <select id="inUniv" class="form-control">
+                                            <option selected>Choose...</option>
+                                            <option>Ab</option>
+                                            <option>Bc</option>
+                                            <option>Cd</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Login</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
     <!-- Script JS Sweet Alert -->
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
 
