--- a/Client/wwwroot/css/user.css
+++ b/Client/wwwroot/css/user.css
@@ -33,3 +33,13 @@
 .rating:hover > input:checked ~ label:before {
     opacity: 0.4
 }
+
+.datepicker td, .datepicker th {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 0.85rem;
+}
+
+.datepicker {
+    margin-bottom: 3rem;
+}
