--- a/Client/wwwroot/css/user.css
+++ b/Client/wwwroot/css/user.css
@@ -43,3 +43,23 @@
 .datepicker {
     margin-bottom: 3rem;
 }
+
+.pagination li {
+    display: inline-block;
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+}
+
+.pagination a {
+    color: black;
+}
+
+.pagination li.active {
+    background-color: #30d1ff;
+    color: white;
+    border: 1px solid #30d1ff;
+}
